--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,17 @@
 }
 
 h1{
-    margin-top: 20px;
     text-align: center;
     margin: auto;
     font-weight: bold;
+}
+
+#titleDiv{
+    margin-top:15px;
+    width: 100%;
+    background-color: #1ed1e1;
+}
+
+form p{
+    font-weight: bold
 }
